unpackaged/main/default/objects/blng__CreditNote__c/fields/blng__Refunds__c.field-meta.xml
<CustomField>
    <fullName>blng__Refunds__c</fullName>
    <inlineHelpText>Somme du montant du remboursement de toutes les lignes de note de crédit</inlineHelpText>
    <label>Refunds</label>
    <summarizedField>blng__CreditNoteLine__c.blng__Refunds__c</summarizedField>
    <summaryForeignKey>blng__CreditNoteLine__c.blng__CreditNote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>