unpackaged/main/default/objects/blng__CreditNote__c/fields/PF_Motif_d_avoir__c.field-meta.xml
<CustomField>
    <fullName>PF_Motif_d_avoir__c</fullName>
    <description>This field has been created to capture the reason why a credit note has been given</description>
    <label>Motif d&#39;avoir</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avoir Retour contractuel</fullName>
            </value>
            <value>
                <fullName>Geste Commercial</fullName>
            </value>
            <value>
                <fullName>N° de compte / libellé clients</fullName>
            </value>
            <value>
                <fullName>Litige Commercial</fullName>
            </value>
            <value>
                <fullName>RFA</fullName>
            </value>
            <value>
                <fullName>Interne</fullName>
            </value>
            <value>
                <fullName>Erreur Exploitation</fullName>
            </value>
            <value>
                <fullName>Automatique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>