unpackaged/main/default/objects/blng__CreditNote__c/fields/Posted_CreditNote_Number__c.field-meta.xml
<CustomField>
    <fullName>Posted_CreditNote_Number__c</fullName>
    <label>Numéro d&#39;avoir</label>
    <length>15</length>
    <type>Text</type>
</CustomField>