unpackaged/main/default/objects/blng__CreditNote__c/fields/templateId__c.field-meta.xml
<CustomField>
    <fullName>templateId__c</fullName>
    <formula>&#39;a2D7T000000TN81UAG&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>templateId</label>
    <type>Text</type>
</CustomField>