unpackaged/main/default/objects/blng__CreditNote__c/validationRules/Changing_Status_to_Posted_is_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Changing_Status_to_Posted_is_not_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT(blng__CreditNoteSourceAction__c)=&quot;Manual&quot;,  ISCHANGED(PF_Statut_Avoir__c) , ISPICKVAL( PRIORVALUE(PF_Statut_Avoir__c) ,&#39;Brouillon&#39;) ,ISPICKVAL( PF_Statut_Avoir__c,&#39;Publié&#39;))</errorConditionFormula>
    <errorMessage>Veuillez envoyer cet avoir en approbation. Si l&#39;avoir a été accepté, le statut sera adapté automatiquement</errorMessage>
</ValidationRule>